@@ -24,3 +24,10 @@ MainSceneController
 Main.java
 - bullshit bot sae sulod ana
 
+!NOTE!
+
+For VM Arguements, add this arguement
+--module-path "C:\Java\javafx-sdk-20.0.1\lib" --add-modules javafx.controls,javafx.fxml,javafx.media
+
+Guide to setting up eclipse:
+https://www.youtube.com/watch?v=Dbb69NiQHso&fbclid=IwAR3nX2g6mgb23edtcx1sTLFUSMzuAql0ZJQ1aWxx3AlUEPopYevruOFzfhc
